--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	<body>
 		<!-- This is a VERY bare bones version of a HTML5 portfolio template! -->
 		<!-- Replace with your name here -->
-		<h1>The Doctor</h1>
+		<h1>Sam Nolan</h1>
 		
 		<!-- Optional: add location eg. Melbourne, Australia -->
-		<p id="location"><em>Gallifrey, Constellation of Kasterborous</em></p>
+		<p id="location"><em>Jan Juc, Australia</em></p>
 		
 		<!-- Add social links here, icons use FontAwesome 5.8.1 -->
         <!-- Link FontAwesome Icons, https://fontawesome.com/icons?d=gallery -->
