Fix student links

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <div id="content">
       <h2>Students</h2>
       <ul>
-        <a href="nikkis-friday.github.io"><li>Nicki</li></a>
-        <a href="sseventwo.github.io"><li>Ian</li></a>
-        <a href="benkoder.github.io"><li>Ben</li></a>
-        <a href="watanaberyunosuke.github.io"><li>Harry</li></a>
+        <a href="https://nikkis-friday.github.io"><li>Nicki</li></a>
+        <a href="https://sseventwo.github.io"><li>Ian</li></a>
+        <a href="https://benkoder.github.io"><li>Ben</li></a>
+        <a href="https://watanaberyunosuke.github.io"><li>Harry</li></a>
       </ul>
       <p>
         People assume that time is a strict progression of cause to affect, but
