Add Nick to page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
     />
 
     <!-- Tagline can be a short list of skills, a quote or profession -->
-    <p id="tagline"><i>"Light mode for life"</i></p>
+    <p id="tagline">
+      <i
+        >"I know that I am intelligent, because I know that I know nothing" -
+        Socrates</i
+      >
+    </p>
     <br />
     <div id="content">
       <h2>Students</h2>
@@ -65,6 +70,7 @@
         <a href="https://sseventwo.github.io"><li>Ian</li></a>
         <a href="https://benkoder.github.io"><li>Ben</li></a>
         <a href="https://watanaberyunosuke.github.io"><li>Harry</li></a>
+        <a href="https://Waterdrinker88.github.io"><li>Nick</li></a>
       </ul>
       <p>
         People assume that time is a strict progression of cause to affect, but
