Update the site

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <a href="https://www.facebook.com/sam.nolan.5030" target="_blank"
         ><i class="fab fa-facebook animated fadeIn" aria-hidden="true"></i
       ></a>
+      <a href="https://www.linkedin.com/in/sam-nolan-51b868157/" target="_blank"
+        ><i class="fab fa-linkedin-in animated fadeIn" aria-hidden="true"></i
+      ></a>
     </div>
     <img
       id="profile-img"
@@ -64,50 +67,55 @@
     </p>
     <br />
     <div id="content">
-      <h2>Students</h2>
-      <ul>
-        <a href="https://nikkis-friday.github.io"><li>Nicki</li></a>
-        <a href="https://sseventwo.github.io"><li>Ian</li></a>
-        <a href="https://benkoder.github.io"><li>Ben</li></a>
-        <a href="https://watanaberyunosuke.github.io"><li>Harry</li></a>
-        <a href="https://Waterdrinker88.github.io"><li>Nick</li></a>
-      </ul>
       <p>
-        People assume that time is a strict progression of cause to affect, but
-        actually, from a non-linier, non subjective point of view it is more
-        like a big ball of wibbily wobbly timey wimey...stuff
+        People often ask me where I want to go in the future, I honestly think
+        that you can't go wrong if you just work on doing really stuff in the
+        present. It's worked for me. Eat, sleep, do cool shit, repeat.
       </p>
-      <h2>Skills</h2>
+      <h2>Positions</h2>
       <ul>
-        <li>Time Travel</li>
-        <li>Telepahy</li>
-        <li>Can Regenerate</li>
-        <li>Preforms well under pressure and extream conditions</li>
-        <li>Accomplished Speed Reader</li>
-        <li>Clairvoyance</li>
-        <li>Dedicated</li>
-        <li>Running, lots of running</li>
-        <li>Great Jigery Pockery Skills</li>
-        <li>Speaks over 5 billion languages</li>
+        <li>
+          Vice President of the
+          <a href="https://theprogramming.club">RMIT Programming Club</a>
+        </li>
+        <li>Web Developer at <a href="https://boojum.com.au">Boojum</a></li>
+        <li>Lab Assistant at RMIT University</li>
       </ul>
-      <h2>Experience</h2>
-      <p>
-        Donec sed cursus nibh, convallis auctor ligula. Pellentesque habitant
-        morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        Nam commodo vel est et finibus. Cras felis mi, interdum sit amet libero
-        eu, varius sagittis risus. Quisque vitae nibh vel quam rutrum feugiat.
-        Duis rhoncus et mi vitae condimentum. Curabitur non mauris mauris. Sed
-        sed augue ex. Fusce aliquet sapien ac pellentesque mollis.
-      </p>
+      <a href="https://github.com/Hazelfire/Resume/raw/master/document.pdf"
+        >Resume</a
+      >
+      <h2>Hard Skills</h2>
+      <ul>
+        <li>Linux Administation</li>
+        <li>Leadership and Event Organisation</li>
+        <li>CI/CD & DevOps (Docker, GitLab)</li>
+        <li>Amazon Web Services (You name it)</li>
+        <li>HTML, CSS, JS, React, Redux, Flow....</li>
+        <li>Rails, Ruby, Python, C, C++, Java, Grails, Groovy, Bash...</li>
+      </ul>
+      <h2>Soft Skills</h2>
+      <ul>
+        <li>Work very well under pressure</li>
+        <li>Very much a leader</li>
+        <li>Charismatic when talking to crowds and individuals</li>
+      </ul>
     </div>
+    <h2>Friends</h2>
+    <ul>
+      <a href="https://nikkis-friday.github.io"><li>Nicki</li></a>
+      <a href="https://sseventwo.github.io"><li>Ian</li></a>
+      <a href="https://benkoder.github.io"><li>Ben</li></a>
+      <a href="https://watanaberyunosuke.github.io"><li>Harry</li></a>
+      <a href="https://Waterdrinker88.github.io"><li>Nick</li></a>
+    </ul>
     <footer>
       <p>This is the site footer</p>
       <p>
         <a href="https://github.com/patrickmfsd/simpleProfile"
           >SimpleProfile template</a
         >
-        by <a href="https://github.com/patrickmfsd">Patrick Mifsud</a>,
-        Copyright 2019
+        by <a href="https://github.com/patrickmfsd">Patrick Mifsud</a>, under
+        the MIT Licence
       </p>
     </footer>
   </body>
