--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         >Resume</a
       >
       <h2>Hard Skills</h2>
+      <a href="https://www.blender.org/"
+        ><img
+          class="technology"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Blender_logo_no_text.svg/1252px-Blender_logo_no_text.svg.png"
+      /></a>
       <ul>
         <li>Linux Administation</li>
         <li>Leadership and Event Organisation</li>
