Add django logo

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png"
         />
       </a>
+      <a href="https://www.djangoproject.com/">
+        <img
+          class="technology"
+          src="https://cdn.worldvectorlogo.com/logos/django.svg"
+        />
+      </a>
       <ul>
         <li>Linux Administation</li>
         <li>Leadership and Event Organisation</li>
