--- a/index.html
+++ b/index.html
@@ -157,6 +157,24 @@
           src="https://cdn.auth0.com/blog/react-js/react.png"
         />
       </a>
+      <a href="https://nodejs.org/en/" target="_blank">
+        <img
+          class="technology"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/1200px-Node.js_logo.svg.png"
+        />
+      </a>
+      <a href="https://www.vim.org/" target="_blank">
+        <img
+          class="technology"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Vimlogo.svg/544px-Vimlogo.svg.png"
+        />
+      </a>
+      <a href="https://redux.js.org/" target="_blank">
+        <img
+          class="technology"
+          src="https://raw.githubusercontent.com/reduxjs/redux/master/logo/logo.png"
+        />
+      </a>
       <ul>
         <li>Linux Administation</li>
         <li>Leadership and Event Organisation</li>
