Fix apollo logo

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <a href="https://www.apollographql.com/" target="_blank">
         <img
           class="technology"
-          src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiIkp_p7bLhAhWYfisKHSRDAPYQjRx6BAgBEAU&url=https%3A%2F%2Fseeklogo.com%2Fvector-logo%2F289300%2Fapollo&psig=AOvVaw2iCv4MVLxyQVCUJ4hZOj21&ust=1554344283841997"
+          src="https://seeklogo.com/images/A/apollo-logo-DC7DD3C444-seeklogo.com.png"
         />
       </a>
       <a href="https://aws.amazon.com/lambda/" target="_blank">
