--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
           />
         </a>
         <a href="https://www.lua.org/" target="_blank">
-          <img class="technology" src="https://www.lua.org/images/luaa.gif" />
+          <img
+            class="technology"
+            src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Lua-logo-nolabel.svg"
+          />
         </a>
         <a href="https://love2d.org/" target="_blank">
           <img
