--- a/index.html
+++ b/index.html
@@ -293,6 +293,12 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/LaTeX_logo.svg/1280px-LaTeX_logo.svg.png"
           />
         </a>
+        <a href="https://www.php.net/" target="_blank">
+          <img
+            class="technology"
+            src="https://www.php.net/images/logos/php-logo.svg"
+          />
+        </a>
       </div>
       <h2>Soft Skills</h2>
       <ul>
