Add some more logos

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Blender_logo_no_text.svg/1252px-Blender_logo_no_text.svg.png"
           />
         </a>
+        <a href="https://www.django-rest-framework.org/" target="_blank">
+          <img
+            class="technology"
+            src="https://miro.medium.com/max/722/1*MQ-Lf8tmtfa-pumN2Sh0cw.png"
+          />
+        </a>
         <a href="https://www.python.org/" target="_blank">
           <img
             class="technology"
@@ -298,6 +304,39 @@
             class="technology"
             src="https://www.php.net/images/logos/php-logo.svg"
           />
+        </a>
+        <a href="https://serverless.com/" target="_blank">
+          <img
+            class="technology"
+            src="https://user-images.githubusercontent.com/2752551/30405068-a7733b34-989e-11e7-8f66-7badaf1373ed.png"
+          />
+        </a>
+        <a href="http://flask.pocoo.org/" target="_blank">
+          <img
+            class="technology"
+            src="https://cdn.worldvectorlogo.com/logos/flask.svg"
+          />
+        </a>
+        <a
+          href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)"
+          target="_blank"
+        >
+          <img
+            class="technology"
+            src="https://www.onlinebooksreview.com/uploads/blog_images/2018/01/27_c-sharp-logo-filled.png"
+          />
+        </a>
+        <a
+          href="https://en.wikipedia.org/wiki/Visual_Basic_.NET"
+          target="_blank"
+        >
+          <img
+            class="technology"
+            src="https://hackr.io/tutorials/learn-visual-basic-net-vb/logo/logo-visual-basic-net-vb?ver=1551354757"
+          />
+        </a>
+        <a href="https://jekyllrb.com/" target="_blank">
+          <img class="technology" src="https://jekyllrb.com/img/logo-2x.png" />
         </a>
       </div>
       <h2>Soft Skills</h2>
