Add Emmet to page

--- a/index.html
+++ b/index.html
@@ -362,6 +362,12 @@
             src="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg"
           />
         </a>
+        <a href="https://emmet.io/"
+          ><img
+            class="technology"
+            src="https://emmet.io/-/4076541266/i/logo.svg"
+            alt="Emmet"
+        /></a>
       </div>
       <h2>Soft Skills</h2>
       <ul>
