--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <a href="https://www.boost.org/"
           ><img
             class="technology"
-            src="https://www.boost.org/gfx/space.png"
+            src="https://theboostcpplibraries.com/static/main/img/boost-logo.svg"
             alt="Boost"
         /></a>
       </div>
