--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         >Resume</a
       >
       <h2>Hard Skills</h2>
-      <div id="elm" class="center"></div>
+      <div class="center"><div id="elm"></div></div>
       <script>
         var app = Elm.Main.init({
           node: document.getElementById('elm'),
