Add styled components and router

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div id="content">
       <p>
         People often ask me where I want to go in the future, I honestly think
-        that you can't go wrong if you just work on doing really stuff in the
-        present. It's worked for me. Eat, sleep, do cool shit, repeat.
+        that you can't go wrong if you just work on doing really cool stuff in
+        the present. It's worked for me. Eat, sleep, do cool shit, repeat.
       </p>
       <h2>Positions</h2>
       <ul>
